# Satto-Server

./: .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.local.yml  init-db.sql  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
migrations/: env.py
migrations/scripts/: fetch_lotto_stores.py  insert_lotto_data.py  insert_lotto_stores.py
migrations/scripts/output/: sido_gugun_map_20251221_021830.json
migrations/versions/: 05818a33a6e5_fix_lotto_prize_amount_type.py  41c657cd9376_initial_migration_with_users.py  47e81b19f851_add_lotto_draws_and_statistics.py  50ef02f95f5c_add_unique_constraint_to_user_daily_.py  578233fccdf8_add_is_read_read_at_field_to_lotto_.py  5b71f35cc0bc_add_user_daily_fortune_summary.py  5f0e5c266c72_add_daily_fortune_resources.py  65357b1f6271_add_atm_table.py  869cf2bf7c54_add_atm_table.py  926bb28822d1_add_user_daily_fortune_detail_table.py  a1b2c3d4e5f6_add_lotto_stores_and_winnings.py  de9ee05d86b4_add_lotto_recommendations.py  e082b238c1e3_add_user_daily_fortune_summary.py  ec45a4f91988_add_user_field.py  fc3ca4174435_add_columns_to_atm_table.py
nginx/: nginx.conf
scripts/: fetch_missing_stores.py
src/: main.py
src/atm/: __init__.py
src/atm/api/: __init__.py  router.py  schemas.py
src/atm/application/: __init__.py  service.py
src/atm/domain/: __init__.py  interfaces.py
src/atm/infrastructure/: __init__.py  repository.py
src/common/: dependencies.py  utils.py
src/common/logger/: __init__.py  handlers.py  initializer.py
src/common/scheduler/: scheduler.py  tasks.py
src/config/: config.py  database.py  lifespan.py  middleware.py  schemas.py
src/fortune/: admin_router.py  repository.py  router.py  service.py  user_router.py
src/fortune/api/: router.py  schemas.py
src/fortune/application/: service.py
src/fortune/domain/: interfaces.py
src/fortune/entities/: enums.py  models.py  schemas.py
src/fortune/infrastructure/: repository.py
src/four_pillars/: __init__.py  router.py
src/four_pillars/api/: schemas.py
src/four_pillars/common/: calculator.py
src/hcx_client/: client.py  router.py
src/lotto/: interfaces.py  repository.py  router.py  service.py
src/lotto/api/: router.py  (+1 more)
src/lotto_stores/: __init__.py
src/storage_client/: client.py
src/users/: repository.py  router.py  service.py
(+48 files in other folders)
