[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Gukhee Jo", email = "project@example.com"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "starlette (>=0.47.1,<0.48.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "aiomysql (>=0.2.0,<0.3.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "cryptography (>=45.0.5,<46.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "greenlet (>=3.2.3,<4.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.9",
]

[tool.ruff]
target-version = "py313"
line-length = 80

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
]
ignore = [
    "E501",  # line too long (handled by formatter)
]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "migrations",
    "mysql_data",
]

[tool.mypy]
python_version = "3.13"
strict = false
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
warn_return_any = true